style: fix editor loading indicator scrollbar showing error

--- a/apps/frontend/styles/components/editor.css
+++ b/apps/frontend/styles/components/editor.css
@@ -7,13 +7,17 @@
 
 .editor-loading-indicator-container {
   align-items: flex-start;
+  background: var(--layout-bg--dashboard);
+  cursor: default;
   display: flex;
   height: 100%;
   justify-content: center;
   left: 0;
+  overflow: hidden;
   position: absolute;
   right: 0;
   top: 0;
+  user-select: none;
   width: 100%;
   z-index: 100;
 }
